# mcp-chinese-time

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: usage_example.py
src/mcp_chinese_time/: __init__.py  __main__.py  parser.py  server.py
tests/: __init__.py  test_parser.py  test_server.py
