[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-chinese-time"
version = "0.1.0"
description = "MCP server for parsing Chinese fuzzy time expressions to standard datetime formats"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Weiyilan", email = "weiyilan@example.com" }
]
keywords = [
    "mcp",
    "time-parsing",
    "chinese",
    "nlp",
    "datetime",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "zhdate>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/weiyilan/mcp-chinese-time"
Repository = "https://github.com/weiyilan/mcp-chinese-time"
Issues = "https://github.com/weiyilan/mcp-chinese-time/issues"

[project.scripts]
mcp-chinese-time = "mcp_chinese_time:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_chinese_time"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]